--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,6 @@ VITE_Sapphire_Testnet_Public_RPC_1 = "https://testnet.sapphire.oasis.io"
 
 VITE_WALLETCONNECT_PROJECT_ID = '' # gaeca 
 
-
-
 # -----------------------------------------------------------------------
 # ------------------------------ supabase  ------------------------------
 # -----------------------------------------------------------------------
@@ -29,7 +27,7 @@ VITE_SUPABASE_ANON_KEY=
 # VITE_SUPABASE_SERVICE_ROLE_KEY=
 
 # -----------------------------------------------------------------------
-# --------------------- oasis explorer(oasis nexus) ---------------------
+# --------------------- oasis explorer(oasis nexus) Public---------------------
 # -----------------------------------------------------------------------
 REACT_APP_BUILD_DATETIME=0
 REACT_APP_BUILD_SHA=sha0000000000000000000000000000000000000
