--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env
+# .env
 .env.local
+.env.*.local
+# Keep .env.example for documentation
+!.env.example
 
 # vercel
 .vercel
@@ -60,4 +63,5 @@ next-env.d.ts
 
 #
 .syncScript/
+scripts/
 
