--- a/.gitignore
+++ b/.gitignore
@@ -45,11 +45,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-# .env
-.env.local
-.env.*.local
+.env
+# .env.local
+# .env.*.local
 # Keep .env.example for documentation
-!.env.example
+# !.env.example
 
 # vercel
 .vercel
