--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env
+# .env
 # .env.local
 # .env.*.local
 # Keep .env.example for documentation
