Update the example

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ VITE_SUPABASE_ANON_KEY=
 # VITE_SUPABASE_SERVICE_ROLE_KEY=
 
 
+# -----------------------------------------------------------------------
+# --------------------- oasis explorer(oasis nexus) Public---------------------
+# -----------------------------------------------------------------------
+VITE_API=https://nexus.oasis.io/v1/
+VITE_TESTNET_API=https://testnet.nexus.oasis.io/v1/
+VITE_LOCALNET_API=http://localhost:8547/v1/
